@@ -5,7 +5,9 @@ use strict;
 my(@common)     = qw(OK DECLINED DONE NOT_FOUND FORBIDDEN
 		     AUTH_REQUIRED SERVER_ERROR);
 my(@methods)    = qw(M_CONNECT M_DELETE M_GET M_INVALID M_OPTIONS
-		     M_POST M_PUT M_TRACE METHODS);
+		     M_POST M_PUT M_TRACE 
+		     M_PATCH M_PROPFIND M_PROPPATCH M_MKCOL M_COPY 
+		     M_MOVE M_LOCK M_UNLOCK METHODS);
 my(@options)    = qw(OPT_NONE OPT_INDEXES OPT_INCLUDES 
 		     OPT_SYM_LINKS OPT_EXECCGI OPT_UNSET OPT_INCNOEXEC
 		     OPT_SYM_OWNER OPT_MULTI OPT_ALL);
