@@ -45,6 +45,14 @@ static char *ETAG_methods[] = {
    "M_POST",
    "M_PUT",
    "M_TRACE",
+   "M_PATCH",
+   "M_PROPFIND",
+   "M_PROPPATCH",
+   "M_MKCOL",
+   "M_COPY",
+   "M_MOVE",
+   "M_LOCK",
+   "M_UNLOCK",
    "METHODS",
    NULL,
 };
