@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_01-dev
 
+add support for new 1.3.4-dev M_* methods, M_PATCH, M_LOCK, etc
+
 fix $r->log->debug when running under -T
 
 new Apache::Leak module
